fixed hero section mobile fonts size

--- a/src/components/HeroSection/HeroSection.module.scss
+++ b/src/components/HeroSection/HeroSection.module.scss
@@ -43,3 +43,15 @@
 .ratingsRow {
   display: flex;
 }
+
+@media only screen and (max-width: 768px) {
+  .container {
+    padding: 2rem 0.5rem;
+  }
+
+  .descriptor {
+    & > h1 {
+      font-size: 2rem;
+    }
+  }
+}
